js/src/tests/test262/built-ins/Error/prototype/stack/setter-receiver-is-null-proto.js




















var set = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').set;

var nullProto = { __proto__: null };
set.call(nullProto, 'null-proto');

verifyProperty(nullProto, 'stack', {
  value: 'null-proto',
  writable: true,
  enumerable: true,
  configurable: true,
});

reportCompare(0, 0);
